@@ -1,3 +1,5 @@
+- Generate correct warning options for "suncc" backend.
+
 v1.2.5 (2014-07-28)
 ===================
 
